Sat May 31 20:28:10 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_regexp.rb: add tests.

Sat May 31 19:11:39 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/utf_16{be,le}.c (utf16{be,le}_code_to_mbc):
	  fix codepoint to bytes.

Sat May 31 18:28:17 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* suppress warnings with -Wwrite-string.

Sat May 31 18:26:33 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_delete_if): should return enumerator if no block
	  is given.  [ruby-dev:34901]

Sat May 31 15:58:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in (warnflags): defaulted to -Wall
	  -Wno-parentheses with gcc.  [ruby-dev:34810]

Sat May 31 15:17:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/mvm.h: new header file for MVM, and moved rb_vm_t and
	  rb_thread_t from vm_core.h.

Sat May 31 12:02:23 2008  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (assert_normal_exit): show pid when fail.

Fri May 30 23:55:56 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_rubyoptions.rb: add a test of RUBY_DESCRIPTION.

Fri May 30 22:47:17 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_regexp.rb: add tests.

Fri May 30 22:40:53 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_signal.rb: add tests to achieve over 80% test
	  coverage of signal.c.

Fri May 30 22:28:03 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* signal.c (esignal_signo): fix SignalException#signo which returned
	  nil absolutely.

	* signal.c (esignal_init): always prepend "SIG" to a string that is
	  returned by SignalException#signm.

Fri May 30 22:17:39 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_argf.rb: rename a conflicting method name.

	* test/ruby/test_string.rb: ditto.

	* test/ruby/test_io.rb: ditto.

Fri May 30 22:14:37 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (defined_expr): fix SEGV by defined?([1]).

Fri May 30 12:18:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
