@@ -1,3 +1,7 @@
+Sat May 31 23:02:00 2008  Tanaka Akira  <akr@fsij.org>
+
+	* gc.c (count_objects): clear given hash.
+
 Sat May 31 20:28:10 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* test/ruby/test_regexp.rb: add tests.
